# frontmatter-check

./: .frontmatter_check.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  example_yaml_config.yaml  justfile  noxfile.py  pyproject.toml
.beads/: issues.jsonl
.github/: .dependabot.yaml  CODE_OF_CONDUCT.md
.github/workflows/: codeql.yml  run_tests.yaml  scorecard.yml
src/frontmatter_check/: __init__.py  cli.py  config_rules.py  frontmatter_validator.py  logger.py  pattern_check.py  rule_validations.py
tests/: conftest.py  test.py  test_app_failure.yaml  test_cli.py  test_cli_directory.py  test_file.md  test_frontmatter_validator.py  test_logging.py  test_rule_validations.py  test_type_validation.py
